Prevent warning about shadowing a member

BUG: 495204
FIXED-IN: 5.2